Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextTextField.quorum
class Main
    text txt
    action Main
        txt = cast(text, "text")
        if txt = "text"
            output "passed"
        end
    end
end