Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjBooleanField.quorum
class main
    Integer int
    action Main
        int = cast(Integer, true)
    end
end